Descriptor de despliegue

--- a/lineadecodigo_servlet/WebContent/WEB-INF/web.xml
+++ b/lineadecodigo_servlet/WebContent/WEB-INF/web.xml
@@ -84,4 +84,7 @@
 		<welcome-file>default.htm</welcome-file>
 		<welcome-file>default.jsp</welcome-file>
 	</welcome-file-list>
+	<session-config>
+		<session-timeout>10</session-timeout>
+	</session-config>
 </web-app>
